<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maggiemulhern.ohiostatefitleaders.Catalog">

    <TextView
        android:id="@+id/TItle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ohiostateorange"
        android:textColor="@color/white"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="241dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <Button
            android:id="@+id/Activity1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/activity_1" />

        <Button
            android:id="@+id/Activity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/activity_2" />

        <Button
            android:id="@+id/Activity3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/activity_3" />

        <Button
            android:id="@+id/Activity4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/activity_4" />

        <Button
            android:id="@+id/Activity5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/activity_5" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
