<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maggiemulhern.ohiostatefitleaders.WorkOut">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="73dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="163dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="23dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linearLayout">

        <CheckBox
            android:id="@+id/Activity1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_1" />

        <CheckBox
            android:id="@+id/Activity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Activity 2"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/Activity3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_3" />

        <CheckBox
            android:id="@+id/Activity4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_4" />

        <CheckBox
            android:id="@+id/Activity5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_5" />
    </LinearLayout>

    <Button
        android:id="@+id/Finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ohiostateorange"
        android:text="@string/finished"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
