<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/ohiostateorange"
        android:textColor="@color/white"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="242dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="49dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/HeartRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/heart_rate"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/Calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/calories"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/Steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/steps"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/Data1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/data"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/Data2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:textColor="@color/white"
            android:text="@string/data_2"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>