<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maggiemulhern.ohiostatefitleaders.ScheduleInfo"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduling_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StartSmartWear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ohiostateorange"
        android:text="@string/go"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="77dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="77dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:text="@string/calendar"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="30dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/Workouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:text="@string/work_out_descriptions"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="188dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/Data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ohiostateorange"
            android:text="@string/your_data"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="326dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
