<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maggiemulhern.ohiostatefitleaders.SurveyActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:elegantTextHeight="false"
        android:text="@string/please_complete_the_following_survey_before_continuing"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/QualtricsButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="163dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/ohiostateorange"
        android:text="@string/qualtrics_survey"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/SurveyContinue"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="97dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="95dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/SurveyContinue"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ohiostateorange"
        android:text="@string/continue_on"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="33dp"
        app:layout_constraintRight_toRightOf="@+id/QualtricsButton"
        android:layout_marginBottom="192dp" />
</android.support.constraint.ConstraintLayout>
